[package]
name = "bittorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"  
serde_json = "1.0.14"
serde_bencode = "0.2.4"
serde = { version = "1.0.136", features = ["derive"] }  
reqwest = { version = "0.11.18", features = ["json","blocking"] }
clap = { version = "4.0.32", features = ["derive"]}  