[package]
name = "bittorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"  
bytes = "1.3.0"   
serde_json = "1.0.14"
serde_bencode = "0.2.4"
serde_urlencoded = "0.7.1"    
serde = { version = "1.0.136", features = ["derive"] }  
reqwest = { version = "0.11.18", features = ["json","blocking"] }
clap = { version = "4.0.32", features = ["derive"]}  
sha1 = "0.10.1" 
hex = "0.4.3"
tokio = { version = "1.23.0", features = ["full"] }  
tokio-util = { version = "0.7.9", features = ["full"] }  
futures-util = { version = "0.3", features = ["sink"] }
kanal = "0.1.0-pre8"